# todolist

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: deploy_main.yaml
.github/workflows/: deploy_main.yaml  push_any_except_main.yaml
deploy/: .env  docker-compose.yaml
todolist/: settings.py  urls.py
todolist/bot/: admin.py  models.py  serializers.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py
todolist/core/: admin.py  fields.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_alter_goalcomment_text_alter_goalcomment_user.py  0004_board_goalcategory_board_boardparticipant.py  0005_alter_goalcategory_board.py  0005_alter_goalcomment_user.py  0006_alter_goalcomment_goal_alter_goalcomment_user.py  0007_alter_goalcomment_goal.py
